[workspace]
members = [
    "three-and-a-bit",
    "non-standard-input",
    "type-conversion",
    "byte-sized-chunks",
    "how-long-is-a-string",
    "please-reboot-the-universe",
    "there-and-back-again",
    "walks-like-a-duck",
    "out-of-order",
    "x-marks-the-spot",
    "stacking-boxes",
    "amnesia",
    "reverse-the-polarity",
]
